salesforce/force-app/main/default/objects/ScanSchedule__c/ScanSchedule__c.object-meta.xml
<CustomObject>
    <description>Cron-driven schedule for OrgPrism forensic scans. Each row corresponds to one System.schedule() job.</description>
    <label>Scan Schedule</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scan Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>