salesforce/force-app/main/default/objects/ScanSchedule__c/fields/CronExpression__c.field-meta.xml
<CustomField>
    <fullName>CronExpression__c</fullName>
    <label>Cron Expression</label>
    <description>Salesforce cron format: Seconds Minutes Hours Day-of-month Month Day-of-week [Year]</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>