salesforce/force-app/main/default/objects/ScanSchedule__c/fields/CronJobId__c.field-meta.xml
<CustomField>
    <fullName>CronJobId__c</fullName>
    <label>Cron Job ID</label>
    <description>The 18-char ID of the CronTrigger created by System.schedule(). Used to abort the job when paused.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>