salesforce/force-app/main/default/objects/ScanSchedule__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <label>Active</label>
    <description>If unchecked, the cron job is unregistered. Toggle off to pause without losing config.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>