salesforce/force-app/main/default/objects/ScanSchedule__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <description>Human-readable label for the schedule (e.g. "Weekly CPQ scan").</description>
    <type>Text</type>
    <length>120</length>
</CustomField>