salesforce/force-app/main/default/objects/ScanSchedule__c/fields/LastRunStatus__c.field-meta.xml
<CustomField>
    <fullName>LastRunStatus__c</fullName>
    <label>Last Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>