salesforce/force-app/main/default/objects/ScanSchedule__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>CPQ</fullName><default>true</default><label>CPQ</label></value>
            <value><fullName>CPQ+Billing</fullName><default>false</default><label>CPQ + Billing</label></value>
            <value><fullName>ARM</fullName><default>false</default><label>Revenue Cloud (ARM)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>